# src/main/java/pro/sorokovsky/sorokchatserverspring/pro/sorokovsky/sorokchatserverspring/configuration/SecurityConfiguration.java
@@ -10,6 +10,9 @@ import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.security.web.authentication.preauth.PreAuthenticatedAuthenticationProvider;
+import org.springframework.web.cors.CorsConfiguration;
+import org.springframework.web.cors.CorsConfigurationSource;
+import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 import pro.sorokovsky.sorokchatserverspring.configurer.JwtConfigurer;
 import pro.sorokovsky.sorokchatserverspring.deserializer.TokenDeserializer;
 import pro.sorokovsky.sorokchatserverspring.factory.AccessTokenFactory;
@@ -18,6 +21,8 @@ import pro.sorokovsky.sorokchatserverspring.serializer.TokenSerializer;
 import pro.sorokovsky.sorokchatserverspring.service.JwtAuthenticationUserDetailsService;
 import pro.sorokovsky.sorokchatserverspring.storage.TokenStorage;
 import pro.sorokovsky.sorokchatserverspring.strategy.JwtSessionStrategy;
+
+import java.util.List;
 
 @Configuration
 public class SecurityConfiguration {
@@ -29,9 +34,11 @@ public class SecurityConfiguration {
             PreAuthenticatedAuthenticationProvider preAuthenticatedAuthenticationProvider
     ) throws Exception {
         http
+                .logout(AbstractHttpConfigurer::disable)
                 .authorizeHttpRequests(requests -> requests
                         .requestMatchers("/authentication/register", "/authentication/login").anonymous()
                         .requestMatchers("/swagger-ui/**", "/openapi.yml/**").permitAll()
+                        .requestMatchers("/authentication/**").authenticated()
                         .anyRequest().authenticated()
                 )
                 .csrf(AbstractHttpConfigurer::disable)
@@ -39,10 +46,21 @@ public class SecurityConfiguration {
                         .sessionCreationPolicy(SessionCreationPolicy.NEVER)
                         .sessionAuthenticationStrategy(jwtSessionStrategy)
                 )
-                .cors(AbstractHttpConfigurer::disable)
+                .cors(cors -> cors.configurationSource(corsConfigurationSource()))
                 .authenticationProvider(preAuthenticatedAuthenticationProvider);
         http.apply(jwtConfigurer);
         return http.build();
+    }
+
+    @Bean
+    public CorsConfigurationSource corsConfigurationSource() {
+        final var configuration = new CorsConfiguration();
+        configuration.setAllowedOrigins(List.of("*"));
+        configuration.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE"));
+        configuration.setAllowedHeaders(List.of("*"));
+        final var source = new UrlBasedCorsConfigurationSource();
+        source.registerCorsConfiguration("/**", configuration);
+        return source;
     }
 
     @Bean
